# SteeringInC-

./: .clang-format  .gitignore  CMakeLists.txt  README.MD  circle.cpp  circle.h  controls.cpp  controls.h  cursesrenderer.cpp  cursesrenderer.h  cyclic_num.h  dna.cpp  dna.h  enumeration.h  event.h  fltkrenderer.cpp  fltkrenderer.h  food.cpp  food.h  irenderer.cpp  irenderer.h  lifespan.cpp  lifespan.h  main.cpp  qtbase.cpp  qtbase.h  qtbuttonbase.cpp  qttogglebutton.cpp  qttogglebutton.h  quadtree.h  rectangle.cpp  rectangle.h  renderer.cpp  renderer.h  split.cpp  utils.cpp  utils.h  vec2d.cpp  vec2d.h  vehicle.cpp  (+3 more)
include/: cursesrenderer.h  cyclic_num.h  enumeration.h  fltkrenderer.h  food.h  lifespan.h  split.h  struct2this.h  utils.h  vec2d.h  vehicle.h  windows_shim.h  world.h
include/ui/: qtbuttonbase.h
src/: dna.cpp  fltkrenderer.cpp  food.cpp  lifespan.cpp  main.cpp  split.cpp  utils.cpp  vec2d.cpp  vehicle.cpp  windows_shim.cpp  world.cpp
src/ui/: controls.cpp  qtbase.cpp  qtbuttonbase.cpp  qttogglebutton.cpp
